// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YearWeatherTable > показывает строки, загрузку и пустую таблицу 1`] = `
<div>
  <div>
    <span
      class="ant-typography ant-typography-secondary table-scroll-hint css-dev-only-do-not-override-mncuj7"
    >
      Прокрутите таблицу влево или вправо, чтобы увидеть все колонки.
    </span>
    <div
      class="table-wrapper _tableWrapper_2a8263"
    >
      <div
        class="ant-table-wrapper _table_2a8263 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-small css-dev-only-do-not-override-mncuj7 ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="width: max-content; min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 80px;"
                      />
                      <col
                        style="width: 120px;"
                      />
                      <col
                        style="width: 140px;"
                      />
                      <col
                        style="width: 110px;"
                      />
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                          scope="col"
                          style="position: sticky; left: 0px; text-align: center;"
                        >
                          Год
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          t° мин / макс
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Осадки
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Ветер
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Облачность
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        tabindex="-1"
                      >
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Год
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            t° мин / макс
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Осадки
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Ветер
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Облачность
                          </div>
                        </th>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2019"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                          style="position: sticky; left: 0px; text-align: center;"
                        >
                          2019
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_temperature_7e00af"
                          >
                            <span
                              class="ant-typography _tempMin_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              -1°
                            </span>
                            <span
                              class="ant-typography _tempSeparator_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              /
                            </span>
                            <span
                              class="ant-typography _tempMax_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              +17°
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <span
                            class="ant-typography css-dev-only-do-not-override-mncuj7"
                          >
                            1.2 мм
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_wind_69fcf6"
                          >
                            <span
                              class="_direction_69fcf6"
                            >
                              <span
                                aria-hidden="true"
                                class="_windArrow_69fcf6"
                                style="transform: rotate(180deg);"
                              >
                                ↑
                              </span>
                              <span
                                class="ant-typography css-dev-only-do-not-override-mncuj7"
                              >
                                Ю
                              </span>
                            </span>
                            <span
                              class="ant-typography css-dev-only-do-not-override-mncuj7"
                            >
                              16 км/ч
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_weatherIcon_67de4e"
                            title="Переменная облачность, умеренный дождь"
                          >
                            <svg
                              aria-hidden="true"
                              class="_picture_67de4e"
                              data-intensity="moderate"
                              data-precipitation="rain"
                              data-sky="partly"
                              viewBox="0 0 32 32"
                            >
                              <g
                                transform="translate(16 13.5) scale(1.3) translate(-17.5 -15.5)"
                              >
                                <g
                                  stroke="#faad14"
                                  stroke-linecap="round"
                                  stroke-width="1.4"
                                >
                                  <circle
                                    cx="14"
                                    cy="13"
                                    fill="#faad14"
                                    r="3.8"
                                    stroke="none"
                                  />
                                  <line
                                    transform="rotate(0 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(45 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(90 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(135 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(180 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(225 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(270 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(315 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                </g>
                                <path
                                  d="M9 18.2c0-2.4 1.8-4.2 4.2-4.2.5-2.2 2.5-3.8 4.8-3.8 2 0 3.7 1.1 4.5 2.7 2 .2 3.5 1.8 3.5 3.9 0 2.2-1.8 4-4 4H12.2c-2.1 0-3.2-1.4-3.2-2.6z"
                                  fill="#f5f5f5"
                                  stroke="#8c8c8c"
                                  stroke-width="1.2"
                                />
                              </g>
                              <g
                                transform="translate(13 22.5) scale(1.05)"
                              >
                                <g>
                                  <path
                                    d="M0 0c1.5 2 2.4 3.1 2.4 4.5C2.4 6.2 1.3 7.2 0 7.2S-2.4 6.2-2.4 4.5C-2.4 3.1-1.5 2 0 0z"
                                    fill="#1677ff"
                                  />
                                </g>
                              </g>
                              <g
                                transform="translate(19 22.5) scale(1.05)"
                              >
                                <g>
                                  <path
                                    d="M0 0c1.5 2 2.4 3.1 2.4 4.5C2.4 6.2 1.3 7.2 0 7.2S-2.4 6.2-2.4 4.5C-2.4 3.1-1.5 2 0 0z"
                                    fill="#1677ff"
                                  />
                                </g>
                              </g>
                            </svg>
                            <span
                              class="ant-typography ant-typography-secondary _cloudCover_67de4e css-dev-only-do-not-override-mncuj7"
                            >
                              40
                              %
                            </span>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0 _anchorRow_2a8263"
                        data-row-key="2020"
                      >
                        <td
                          class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                          style="position: sticky; left: 0px; text-align: center;"
                        >
                          2020
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_temperature_7e00af"
                          >
                            <span
                              class="ant-typography _tempMin_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              -1°
                            </span>
                            <span
                              class="ant-typography _tempSeparator_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              /
                            </span>
                            <span
                              class="ant-typography _tempMax_7e00af css-dev-only-do-not-override-mncuj7"
                            >
                              +17°
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <span
                            class="ant-typography css-dev-only-do-not-override-mncuj7"
                          >
                            1.2 мм
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_wind_69fcf6"
                          >
                            <span
                              class="_direction_69fcf6"
                            >
                              <span
                                aria-hidden="true"
                                class="_windArrow_69fcf6"
                                style="transform: rotate(180deg);"
                              >
                                ↑
                              </span>
                              <span
                                class="ant-typography css-dev-only-do-not-override-mncuj7"
                              >
                                Ю
                              </span>
                            </span>
                            <span
                              class="ant-typography css-dev-only-do-not-override-mncuj7"
                            >
                              16 км/ч
                            </span>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                          style="text-align: center;"
                        >
                          <div
                            class="_weatherIcon_67de4e"
                            title="Переменная облачность, умеренный дождь"
                          >
                            <svg
                              aria-hidden="true"
                              class="_picture_67de4e"
                              data-intensity="moderate"
                              data-precipitation="rain"
                              data-sky="partly"
                              viewBox="0 0 32 32"
                            >
                              <g
                                transform="translate(16 13.5) scale(1.3) translate(-17.5 -15.5)"
                              >
                                <g
                                  stroke="#faad14"
                                  stroke-linecap="round"
                                  stroke-width="1.4"
                                >
                                  <circle
                                    cx="14"
                                    cy="13"
                                    fill="#faad14"
                                    r="3.8"
                                    stroke="none"
                                  />
                                  <line
                                    transform="rotate(0 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(45 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(90 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(135 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(180 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(225 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(270 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                  <line
                                    transform="rotate(315 14 13)"
                                    x1="14"
                                    x2="14"
                                    y1="8.2"
                                    y2="5.999999999999999"
                                  />
                                </g>
                                <path
                                  d="M9 18.2c0-2.4 1.8-4.2 4.2-4.2.5-2.2 2.5-3.8 4.8-3.8 2 0 3.7 1.1 4.5 2.7 2 .2 3.5 1.8 3.5 3.9 0 2.2-1.8 4-4 4H12.2c-2.1 0-3.2-1.4-3.2-2.6z"
                                  fill="#f5f5f5"
                                  stroke="#8c8c8c"
                                  stroke-width="1.2"
                                />
                              </g>
                              <g
                                transform="translate(13 22.5) scale(1.05)"
                              >
                                <g>
                                  <path
                                    d="M0 0c1.5 2 2.4 3.1 2.4 4.5C2.4 6.2 1.3 7.2 0 7.2S-2.4 6.2-2.4 4.5C-2.4 3.1-1.5 2 0 0z"
                                    fill="#1677ff"
                                  />
                                </g>
                              </g>
                              <g
                                transform="translate(19 22.5) scale(1.05)"
                              >
                                <g>
                                  <path
                                    d="M0 0c1.5 2 2.4 3.1 2.4 4.5C2.4 6.2 1.3 7.2 0 7.2S-2.4 6.2-2.4 4.5C-2.4 3.1-1.5 2 0 0z"
                                    fill="#1677ff"
                                  />
                                </g>
                              </g>
                            </svg>
                            <span
                              class="ant-typography ant-typography-secondary _cloudCover_67de4e css-dev-only-do-not-override-mncuj7"
                            >
                              40
                              %
                            </span>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`YearWeatherTable > показывает строки, загрузку и пустую таблицу 2`] = `
<div>
  <div>
    <span
      class="ant-typography ant-typography-secondary table-scroll-hint css-dev-only-do-not-override-mncuj7"
    >
      Прокрутите таблицу влево или вправо, чтобы увидеть все колонки.
    </span>
    <div
      class="table-wrapper _tableWrapper_2a8263"
    >
      <div
        class="ant-table-wrapper _table_2a8263 css-dev-only-do-not-override-mncuj7"
      >
        <div
          class="ant-spin-nested-loading css-dev-only-do-not-override-mncuj7"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table ant-table-small ant-table-empty css-dev-only-do-not-override-mncuj7 ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                  style="overflow-x: auto; overflow-y: hidden;"
                >
                  <table
                    style="width: max-content; min-width: 100%; table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        style="width: 80px;"
                      />
                      <col
                        style="width: 120px;"
                      />
                      <col
                        style="width: 140px;"
                      />
                      <col
                        style="width: 110px;"
                      />
                      <col
                        style="width: 100px;"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                          scope="col"
                          style="position: sticky; left: 0px; text-align: center;"
                        >
                          Год
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          t° мин / макс
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Осадки
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Ветер
                        </th>
                        <th
                          class="ant-table-cell"
                          scope="col"
                          style="text-align: center;"
                        >
                          Облачность
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        aria-hidden="true"
                        class="ant-table-measure-row"
                        tabindex="-1"
                      >
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Год
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            t° мин / макс
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Осадки
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Ветер
                          </div>
                        </th>
                        <th
                          class="ant-table-measure-cell"
                        >
                          <div
                            class="ant-table-measure-cell-content"
                          >
                            Облачность
                          </div>
                        </th>
                      </tr>
                      <tr
                        class="ant-table-placeholder"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="5"
                        >
                          <div
                            class="css-dev-only-do-not-override-mncuj7 ant-empty ant-empty-normal"
                          >
                            <div
                              class="ant-empty-image"
                            >
                              <svg
                                height="41"
                                viewBox="0 0 64 41"
                                width="64"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <title>
                                  Нет данных
                                </title>
                                <g
                                  fill="none"
                                  fill-rule="evenodd"
                                  transform="translate(0 1)"
                                >
                                  <ellipse
                                    cx="32"
                                    cy="33"
                                    fill="#f5f5f5"
                                    rx="32"
                                    ry="7"
                                  />
                                  <g
                                    fill-rule="nonzero"
                                    stroke="#d9d9d9"
                                  >
                                    <path
                                      d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                    />
                                    <path
                                      d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                      fill="#fafafa"
                                    />
                                  </g>
                                </g>
                              </svg>
                            </div>
                            <div
                              class="ant-empty-description"
                            >
                              Нет данных
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
